# proxy-checker

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checker.rs  chrome.rs  geo.rs  lib.rs  main.rs  types.rs
src/components/: ActionBar.module.css  ActionBar.tsx  BulkPasteModal.module.css  BulkPasteModal.tsx  ControlsBar.module.css  ControlsBar.tsx  ErrorBoundary.tsx  Header.module.css  Header.tsx  ProxyTable.module.css  ProxyTable.tsx  SelectionBar.module.css  SelectionBar.tsx  SettingsModal.module.css  SettingsModal.tsx  StatusBar.module.css  StatusBar.tsx  Toast.module.css  Toast.tsx
src/context/: ThemeContext.tsx
src/hooks/: useProxyStore.ts
src/styles/: global.css  variables.css
src/types/: proxy.ts
src/utils/: export.ts  filters.ts  proxyParser.ts
